--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.1",
     "bootstrap": "^4.6.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "eslint": "8.22.0",
     "prettier": "^3.1.0"
   }
