--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://serhii-boop.github.io/esigner-front",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -63,6 +66,7 @@
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
     "eslint": "8.22.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.1.0"
   }
 }
