--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages develop -d build"
+    "deploy": "gh-pages -b gh-page -d build"
   },
   "homepage": "https://serhii-boop.github.io/esigner-front",
   "eslintConfig": {
